# spdx-diff

./: .gitignore  CHANGELOG.md  INSTALL.md  LICENSE  README.md  inject_kernel_config.py  pyproject.toml  sbom-diff  sbom-diff-tool
.github/workflows/: test.yaml
src/sbom_diff/: cli.py
src/spdx_diff/: __init__.py  cli.py
tests/: conftest.py  helper.py  test_kernel.py  test_package.py  test_packageconfig.py
