[project]
name = "sbom-diff"
dynamic = ["version"]
description = "SPDX3 SBOM comparison tool for packages, kernel config, and PACKAGECONFIG"
readme = "README.md"
license = {text = "GPL-2.0"}
requires-python = ">=3.8"
authors = [
    {name = "Kamel BOUHARA", email = "kamel.bouhara@bootlin.com"}
]
keywords = ["spdx", "sbom", "yocto", "embedded", "linux", "kernel", "packageconfig"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
]

[project.scripts]
sbom-diff = "sbom_diff.cli:main"

[project.urls]
Repository = "https://github.com/bootlin/sbom-diff"
Documentation = "https://github.com/bootlin/sbom-diff/blob/main/README.md"
"Bug Tracker" = "https://github.com/bootlin/sbom-diff/issues"
Changelog = "https://github.com/bootlin/sbom-diff/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/sbom_diff/__init__.py"

[tool.hatch.build.targets.wheel]
only-packages = true
packages = ["src/sbom_diff"]
